# dynamic-box

./: .gitignore  CVREADME.md  Dockerfile  Dockerfile.dev  Makefile  README.md  SN4893701.conf  config.yaml  pixi.toml  pyproject.toml  rosbag_reader.py  rviz.rviz
.devcontainer/: Dockerfile.dev  devcontainer.json
docs/: goals.txt  robosense_ros_sdk.txt
gpu/: .gitignore  Makefile  main.cu
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
my_rosbag_reader/cluster_node/: CMakeLists.txt  package.xml
my_rosbag_reader/cluster_node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_rosbag_reader/cluster_node/install/cluster_node/include/cluster_node/cluster_node/msg/: obstacle.h  obstacle_array.h  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp
my_rosbag_reader/cluster_node/install/cluster_node/include/cluster_node/cluster_node/msg/detail/: obstacle__rosidl_typesupport_fastrtps_cpp.hpp  obstacle__rosidl_typesupport_introspection_c.h  obstacle__rosidl_typesupport_introspection_cpp.hpp  obstacle__struct.hpp  obstacle__traits.hpp  obstacle__type_support.cpp  obstacle__type_support.h  obstacle__type_support.hpp  obstacle_array__rosidl_typesupport_introspection_c.h  obstacle_array__rosidl_typesupport_introspection_cpp.hpp  obstacle_array__struct.hpp  obstacle_array__type_support.cpp  obstacle_array__type_support.hpp
my_rosbag_reader/cluster_node/install/cluster_node/lib/cluster_node/: cluster_cpp
my_rosbag_reader/cluster_node/install/cluster_node/local/lib/python3.10/dist-packages/cluster_node-0.0.0-py3.10.egg-info/: SOURCES.txt  top_level.txt
my_rosbag_reader/cluster_node/install/cluster_node/local/lib/python3.10/dist-packages/cluster_node/msg/: __init__.py  _obstacle.py  _obstacle_array.py
my_rosbag_reader/cluster_node/install/cluster_node/share/ament_index/resource_index/parent_prefix_path/: cluster_node
my_rosbag_reader/cluster_node/install/cluster_node/share/cluster_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_rosbag_reader/cluster_node/install/cluster_node/share/cluster_node/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  cluster_nodeConfig.cmake  cluster_node__rosidl_typesupport_cppExport-noconfig.cmake  cluster_node__rosidl_typesupport_introspection_cExport-noconfig.cmake  cluster_node__rosidl_typesupport_introspection_cExport.cmake  export_cluster_node__rosidl_generator_cExport-noconfig.cmake  export_cluster_node__rosidl_generator_cExport.cmake  export_cluster_node__rosidl_typesupport_fastrtps_cExport.cmake  export_cluster_node__rosidl_typesupport_fastrtps_cppExport.cmake
my_rosbag_reader/cluster_node/install/cluster_node/share/cluster_node/msg/: Obstacle.idl  ObstacleArray.idl
my_rosbag_reader/cluster_node/log/: latest_build
my_rosbag_reader/cluster_node/src/: cluster_node.cpp  kms.cpp  two_layer_graph.cpp
(+21 files in other folders)
